--- a/server/djangoapp/microservices/Dockerfile
+++ b/server/djangoapp/microservices/Dockerfile
@@ -7,4 +7,5 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
 RUN ls
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+EXPOSE 4269
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "-p", "4269"]
