--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =http://localhost:3030
-sentiment_analyzer_url=http://localhost:5000
+backend_url =http://14.187.196.37:3030
+sentiment_analyzer_url=http://14.187.196.37:5000
